@@ -237,6 +237,9 @@
 /* Define to 1 if you have the `__argz_stringify' function. */
 #undef HAVE___ARGZ_STRINGIFY
 
+/* Define if ffs is not declared in system header files. */
+#undef NEED_DECLARATION_FFS
+
 /* Define if free is not declared in system header files. */
 #undef NEED_DECLARATION_FREE
 
