@@ -164,11 +164,12 @@ AC_CHECK_FUNCS(strtoull)
 
 BFD_BINARY_FOPEN
 
-BFD_NEED_DECLARATION(strstr)
-BFD_NEED_DECLARATION(malloc)
-BFD_NEED_DECLARATION(realloc)
+BFD_NEED_DECLARATION(ffs)
 BFD_NEED_DECLARATION(free)
 BFD_NEED_DECLARATION(getenv)
+BFD_NEED_DECLARATION(malloc)
+BFD_NEED_DECLARATION(realloc)
+BFD_NEED_DECLARATION(strstr)
 
 # If we are configured native, pick a core file support file.
 COREFILE=
